Create button gradient component to unify button implementations.

--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
@@ -23,9 +23,7 @@
   <div class="flex">
     <h1 class="add-movie-title" mat-dialog-title>Add movie 🍿</h1>
     @if(data?.pollData?.pollItems) {
-      <div class="add-new-item-btn suggest-movie-btn" (click)="suggestMovies()">
-        <img [lazyLoad]="'/assets/img/icons-ai/text.png'" width="18px" height="18px"> Suggest movies
-      </div>
+      <button-gradient [buttonImg]="'/assets/img/icons-ai/text.png'" [buttonText]="'Suggest movies'" (buttonClicked)="suggestMovies()"></button-gradient>
     }
   </div>
 
