--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -964,9 +964,8 @@ h2 {
   font-size: 20px;
 }
 
-.add-new-item-btn {
-  margin: 10px auto 15px;
-  width: 200px;
+button-gradient {
+  margin: 10px auto auto 0;
 }
 
 // Comma Logic
