--- a/src/app/poll-management/poll-management.component.scss
+++ b/src/app/poll-management/poll-management.component.scss
@@ -138,3 +138,12 @@
     margin: -5px 0;
   }
 }
+
+.favorite-polls {
+  margin-bottom: 5px;
+
+  .favorite-poll {
+    padding: 0;
+    margin: -5px 0;
+  }
+}
