--- a/src/styles.scss
+++ b/src/styles.scss
@@ -889,3 +889,7 @@ html {
   --mat-bottom-sheet-container-background-color: #1f272e;
   --mat-bottom-sheet-container-text-color: whitesmoke;
 }
+
+.selected-icon {
+  color: #9aa6ea;
+}
