Upgrade to Angular 19

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,11 +1,13 @@
 @use "@angular/material" as mat;
 @use "./m3-theme.scss";
 
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 html {
   // Apply the light theme by default
-  @include mat.core-theme(m3-theme.$light-theme);
+  @include mat.elevation-classes();
+  @include mat.app-background();
   @include mat.button-theme(m3-theme.$light-theme);
 
   // Theme doesn't work well with slide-toggle, override colors
