Update to Angular 20. Fix issues with provide AI. Add poll stats visible.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer">
-  &#9426; Jari Kuisma {{ today | date : "YYYY" }}
+  &#9426; Jari Kuisma {{ today | date : "y" }}
   |
   <a href="https://www.linkedin.com/in/kuismajari/" title="Jari Kuisma @ LinkedIn">LinkedIn</a> |
   <a href="https://github.com/acoustic-/poll-a-lot">Github</a> |
