--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
     <div class="flex">
       <img
         class="poll-a-lot-header"
-        src="/assets/img/poll-a-lot-movie-header.svg"
+        src="/assets/img/poll-a-lot-movie-header.png"
         alt="Popcorn, movie tickets and other movie related graphics"
       />
       <div class="flex-column">
