--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -94,7 +94,7 @@ movie))) {
           </h1>
           <div class="subtitle">
             <div class="basics">
-              <span class="year">{{ (movie?.release_date || movie?.releaseDate) | date : "yyyy" }}</span
+              <span class="year">{{ (movie?.release_date || movie?.releaseDate) | date : "y" }}</span
               ><span class="separator">|</span
               ><span class="runtime">{{ movie?.runtime || '∞ ' }} min</span>
             </div>
