--- a/src/app/series-poll-item/series-poll-item.component.html
+++ b/src/app/series-poll-item/series-poll-item.component.html
@@ -14,11 +14,11 @@
         <div class="subtitle">
           <div class="basics">
             <span class="year"
-              >{{ series.first_air_date | date : "yyyy" }} -
+              >{{ series.first_air_date | date : "y" }} -
               {{
               series.in_production
               ? ""
-              : (series.last_air_date | date : "yyyy")
+              : (series.last_air_date | date : "y")
               }}</span
               >
               <span class="runtime">| {{ series.episode_run_time }} min</span>
