--- a/src/app/watch-list/watch-list-item/watch-list-item.component.html
+++ b/src/app/watch-list/watch-list-item/watch-list-item.component.html
@@ -22,7 +22,7 @@
             <div class="subtitle">
               <div class="basics">
                 <span class="year">{{
-                  movie?.releaseDate | date : "yyyy"
+                  movie?.releaseDate | date : "y"
                   }}</span
                   ><span class="separator">|</span
                   ><span class="runtime">{{ movie?.runtime }} min</span>
